Fix 'clippy is not defined' error

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/clippyjs@latest"></script>
+    <script src="dist/clippy.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
